Change copyright to be Everyone Can Get Rich

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      <footer>&#169; This Calculator belongs to Alfred Wong</footer>
+      <footer>&#169; Everyone Can Get Rich</footer>
     </div>
   </body>
 </html>
